--- a/sudoku.html
+++ b/sudoku.html
@@ -3,150 +3,37 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku - Play a Game</title>
     <link rel="stylesheet" href="styles/sudoku.css">
+    <script src="scripts/sudoku.js"></script>
     <!-- reference your stylesheet here -->
     <!-- reference your source code here -->
 </head>
 
 <body>
-    <div class="column">
-        <table cellpaddibg="0" cellspacing="0">
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td>1</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>9</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td>4</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>2</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td>8</td>
-                    <td></td>
-                    <td></td>
-                    <td>5</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>3</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>4</td>
-                    <td></td>
-                    <td>1</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td>1</td>
-                    <td>8</td>
-                    <td></td>
-                    <td></td>
-                    <td>6</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>3</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>8</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td>6</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <div>
-            <table id="bottomNum">
-                <tbody>
-                    <tr>
-                        <td id="bottom">1</td>
-                        <td id="bottom">2</td>
-                        <td id="bottom">3</td>
-                        <td id="bottom">4</td>
-                        <td id="bottom">5</td>
-                        <td id="bottom">6</td>
-                        <td id="bottom">7</td>
-                        <td id="bottom">8</td>
-                        <td id="bottom">9</td>
-                        <td class="img">
-                            <img src="images\undo.png" alt="er" class="img">
-                        </td>
+    <!-- <h2 id="errors">0</h2> -->
 
-
-                    </tr>
-                </tbody>
-            </table>
+    <!-- 9x9 board -->
+    <div class="topnav">
+        <a> <img src="images/logo.gif" alt="" style="height: 20px;"></a>
+        <a href="#home">Sudoku Centre</a>
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+    <div id="board"></div>
+    <br>
+    <div class="rowDigits">
+        <div id="digits"></div>
+        <div class="borderDiv">
+            <img src="images/undo.png" alt="" class="undoImage">
         </div>
 
-
-
-
-
-
-
-        <!-- your content goes here -->
-
     </div>
+
 </body>
 
 </html>
