--- a/sudoku.html
+++ b/sudoku.html
@@ -19,12 +19,14 @@
     <div class="topnav">
         <a> <img src="images/logo.gif" alt="" style="height: 20px;"></a>
         <a href="#home">Sudoku Centre</a>
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="#home">Play Game</a>
+        <a href="#news">High Scores</a>
+
     </div>
+    
     <div id="board"></div>
+
+
     <br>
     <div class="rowDigits">
         <div id="digits"></div>
