--- a/sudoku.html
+++ b/sudoku.html
@@ -23,7 +23,7 @@
         <a href="#news">High Scores</a>
 
     </div>
-    
+
     <div id="board"></div>
 
 
@@ -31,7 +31,10 @@
     <div class="rowDigits">
         <div id="digits"></div>
         <div class="borderDiv">
-            <img src="images/undo.png" alt="" class="undoImage">
+            <button class="undoButton" onclick="undo()" >
+                <img src="images/undo.png" alt="" class="undoImage">
+            </button>
+
         </div>
 
     </div>
