Highlighting errors works

--- a/high_scores.html
+++ b/high_scores.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku - High Scores</title>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $("#navigation").load("navbar.html");
+        });
+    </script>
     <!-- reference your stylesheet here -->
     <!-- reference your source code here -->
 </head>
+
 <body>
-    <!-- your content goes here -->
+    <div id="navigation"></div>
 </body>
+
 </html>
