--- a/high_scores.html
+++ b/high_scores.html
@@ -11,12 +11,18 @@
             $("#navigation").load("navbar.html");
         });
     </script>
-    <!-- reference your stylesheet here -->
-    <!-- reference your source code here -->
+    <script src="scripts/high_scores.js" defer></script>
+    <link rel="stylesheet" href="styles/sudoku.css">
+
 </head>
 
 <body>
     <div id="navigation"></div>
+    <div class="flex-container">
+        <div id="highScore"></div>
+    </div>
+
+
 </body>
 
 </html>
