--- a/navbar.html
+++ b/navbar.html
@@ -5,7 +5,7 @@
 
 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-        <a> <img src="images/logo.gif" alt="" style="height: 30px; width: auto; margin-top: 10px; margin-left: 10px;"></a>
+        <a> <img src="images/logo.gif" alt="" style="height: 30px; width: auto !important; margin-top: 10px; margin-left: 10px;"></a>
         <a class="navbar-item" href="#">Sudoku Centre</a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -18,7 +18,7 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="#">Play Game</a>
+            <a class="navbar-item" href="sudoku.html">Play Game</a>
             <a class="navbar-item" href="high_scores.html" id="highscores">Highscores</a>
         </div>
     </div>
