--- a/sudoku.html
+++ b/sudoku.html
@@ -20,9 +20,12 @@
 </head>
 
 <body>
- 
+
     <div id="navigation"></div>
-    <div id="board"></div>
+    <div class="outerContainer">
+        <div id="board"></div>
+    </div>
+
     <br>
     <div class="rowDigits">
         <div id="digits"></div>
