--- a/high_scores.html
+++ b/high_scores.html
@@ -11,6 +11,19 @@
             $("#navigation").load("navbar.html");
         });
     </script>
+    <script>
+        $(document).ready(function () {
+
+            // Check for click events on the navbar burger icon
+            $(".navbar-burger").click(function () {
+                console.log("clicked");
+                // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                $(".navbar-burger").toggleClass("is-active");
+                $(".navbar-menu").toggleClass("is-active");
+
+            });
+        });
+    </script>
     <script src="scripts/high_scores.js" defer></script>
     <link rel="stylesheet" href="styles/sudoku.css">
 
