--- a/navbar.html
+++ b/navbar.html
@@ -1,11 +1,26 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script>
+        $(document).ready(function () {
+
+            // Check for click events on the navbar burger icon
+            $(".navbar-burger").click(function () {
+                console.log("clicked");
+                // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                $(".navbar-burger").toggleClass("is-active");
+                $(".navbar-menu").toggleClass("is-active");
+
+            });
+        });
+    </script>
+
 </head>
 
 
 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-        <a> <img src="images/logo.gif" alt="" style="height: 30px; width: auto !important; margin-top: 10px; margin-left: 10px;"></a>
+        <a> <img src="images/logo.gif" alt=""
+                style="height: 30px; width: auto !important; margin-top: 10px; margin-left: 10px;"></a>
         <a class="navbar-item" href="#">Sudoku Centre</a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -18,7 +33,7 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="sudoku.html">Play Game</a>
+            <a class="navbar-item" href="sudoku.html" >Play Game</a>
             <a class="navbar-item" href="high_scores.html" id="highscores">Highscores</a>
         </div>
     </div>
